--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Blog Application</title>
-  <base href="https://siddy2016.github.io/BlogApp-frontend/">
+  <base href="https://siddy2016.github.io/BlogApp-frontend">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
