--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Blog Application</title>
+  <title>Blog App</title>
   <base href="https://siddy2016.github.io/BlogApp-frontend/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
